TestFx setup (#49)
Basic TestFx has been setup.
Co-authored-by: Christian Veiby <chriveib@stud.ntnu.no>